# stdhelper

./: .gitlab-ci.yml  CMakeLists.txt  build.sh  clean.sh  containerhelper.hpp  format.hpp  graphhelper.hpp  install.sh  random.hpp  stringhelper.hpp  uninstall.sh
include/stdhelper/: containerhelper.hpp  stringhelper.hpp
include/vvvstdhelper/: actionlist.hpp  actionmap.hpp  containerhelper.hpp  data_listener.hpp  dynamic_data.hpp  endian.hpp  format.hpp  graphhelper.hpp  has_operator.hpp  math_functors.hpp  random.hpp  shared_function.hpp  time.hpp  view.hpp
src/: containerhelper.hpp  format.hpp  view.hpp
tests/: CMakeLists.txt  action_list_test.cpp  container_test.cpp  data_listener_test.cpp  dynamic_data_test.cpp  endian_test.cpp  format_test.cpp  has_operator_test.cpp  test.cpp  time_test.cpp  view_test.cpp
